# BiuGame

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindSDL2.cmake
src/core/: Canvas.cpp  Canvas.h  Color.h  Game.cpp  Game.h  GameException.h  GameWindow.cpp  GameWindow.h  Graphics.h  Resources.cpp  Resources.h  ResourcesMaganger.cpp  ResourcesMaganger.h  Scenes.cpp  Scenes.h  Window.cpp  Window.h
src/includes/: Logger.h  sdl_utils.h
